--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,5 +12,5 @@ blocks:
           commands:
             - checkout
             - sem-version ruby 2.6.0
-            - bundle install --deployment --path vendor/bundle
+            - bundle install
             - bundle exec rspec
