--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,13 +20,15 @@ jobs:
       - checkout
       - run:
           name: Which bundler?
-          command: bundle -v
+          command: |
+            bundle -v
+            gem install bundler:2.0.1
       - ruby/bundle-install
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+  build: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - build
