--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,11 +19,11 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Which bundler?
+          name: Configure Bundler
           command: |
-            bundle -v
-            gem install bundler:2.0.1
-      - ruby/bundle-install
+            echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
+            source $BASH_ENV
+            gem install bundler
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
